--- a/src/includes/carbon-components/_requisits.scss
+++ b/src/includes/carbon-components/_requisits.scss
@@ -28,6 +28,7 @@
     --#{$prefix}-focus: #{$eccgui-color-accent};
     --#{$prefix}-icon-primary: #{$eccgui-color-workspace-text};
     --#{$prefix}-border-subtle-00: #{eccgui-color-var("identity", "background", "700")};
+    --#{$prefix}-border-subtle: var(--#{$prefix}-border-subtle-00);
     --#{$prefix}-icon-secondary: #{eccgui-color-var("identity", "text", "700")};
     --#{$prefix}-icon-primary: #{eccgui-color-var("identity", "text", "900")};
 }
